update python versions and add mypy

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,20 @@ matrix:
     - python: "3.6"
     - python: "3.7"
     - python: "3.8"
-    - python: "3.8-dev"
-    - python: "3.9-dev"
-    - python: "pypy3"
+    - python: "3.9"
   allow_failures:
-    - python: "3.8-dev"
     - python: "3.9-dev"
+    - python: "3.10-dev"
     - python: "pypy3"
+      env: NO_MYPY=true
 install:
   - pip3 install .
 before_script:
   - pip3 install coverage
+  - if ! $NO_MYPY; then pip3 install mypy; fi
   - pip3 install coveralls
 script:
   - coverage run --source mavehgvs -m unittest
+  - if ! $NO_MYPY; then mypy mavehgvs tests; fi
 after_success:
   - coveralls
