--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ matrix:
     - python: "3.7"
     - python: "3.8"
     - python: "3.9"
+    - python: "3.9-dev"
+    - python: "3.10-dev"
+    - python: "pypy3"
+      env: NO_MYPY=true
   allow_failures:
     - python: "3.9-dev"
     - python: "3.10-dev"
